data-studio/components/product-gui/automlab-web-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automlab-web-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: automlab-web-app
  template:
    metadata:
      labels:
        app: automlab-web-app
    spec:
      containers:
      - name: automlab-ui
        image: 404906229455.dkr.ecr.ap-northeast-1.amazonaws.com/product-gui-automlab:1dfd26e
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080      
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          failureThreshold: 2
          initialDelaySeconds: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 15
          failureThreshold: 3
          periodSeconds: 10
      serviceAccountName: data-studio-ui-runner
