data-studio/components/product-gui/automlab-web-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: automlab-web-app-service
spec:
  ports:
  - name: http-automlab-ui
    port: 80
    targetPort: 8080
  selector:
    app: automlab-web-app
  type: ClusterIP
